@@ -9,7 +9,7 @@ import time
 class DECDCTests(object):
   @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented")
-  @knownBug(terminal="xterm", reason="xterm requires left-right mode for DECDC")
+  @knownBug(terminal="notxterm", reason="xterm requires left-right mode for DECDC")
   def test_DECDC_DefaultParam(self):
     """Test DECDC with default parameter """
     esccmd.CUP(Point(1, 1))
@@ -25,7 +25,7 @@ class DECDCTests(object):
 
   @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented")
-  @knownBug(terminal="xterm", reason="xterm requires left-right mode for DECDC")
+  @knownBug(terminal="notxterm", reason="xterm requires left-right mode for DECDC")
   def test_DECDC_ExplicitParam(self):
     """Test DECDC with explicit parameter. Also verifies lines above and below
     the cursor are affected."""
@@ -97,7 +97,7 @@ class DECDCTests(object):
 
   @vtLevel(4)
   @knownBug(terminal="iTerm2", reason="Not implemented")
-  @knownBug(terminal="xterm", reason="xterm requires left-right mode for DECDC")
+  @knownBug(terminal="notxterm", reason="xterm requires left-right mode for DECDC")
   def test_DECDC_DeleteAll(self):
     """Test DECDC behavior when deleting more columns than are available."""
     width = GetScreenSize().width()
